<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/material_grey_100"
              android:gravity="center_vertical|center_horizontal">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        android:ems="10"
        app:met_textColor="@color/md_grey_500"

        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/inputLogin"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:autoText="false"
        android:windowSoftInputMode="stateVisible|adjustPan"
        android:hint="@string/login"
        android:singleLine="true"
        android:text="asdfgh" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        app:met_textColor="@color/md_grey_500"
        android:windowSoftInputMode="stateVisible|adjustPan"
        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:autoText="false"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/inputPass"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/password"
        android:text="asd123" />






    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        app:met_textColor="@color/md_grey_500"

        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:autoText="false"
        android:windowSoftInputMode="stateVisible|adjustPan"

        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/inputMail"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/email"
        android:text="asdsaf@asf.com" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        app:met_textColor="@color/md_grey_500"
        android:windowSoftInputMode="stateVisible|adjustPan"
        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:autoText="false"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputLName"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/text_first_name"
        android:layout_height="wrap_content"
        android:text="asfasf" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:met_textColor="@color/md_grey_500"
        android:windowSoftInputMode="stateVisible|adjustPan"
        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:autoText="false"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputFName"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/text_last_name"
        android:text="asfzxv" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:met_textColor="@color/md_grey_500"
        android:windowSoftInputMode="stateVisible|adjustPan"
        app:met_underlineColor="@color/md_deep_purple_600"
        app:met_floatingLabel="highlight"
        android:autoText="false"
        android:id="@+id/inputMName"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:hint="@string/text_middle_name"
        android:text="asgzxb" />




    <Button
        android:windowSoftInputMode="stateVisible|adjustPan"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/text_reg_butt"
        android:id="@+id/reg_butt"
        android:layout_gravity="center_horizontal"
        android:theme="@style/button_normal_red"
        android:layout_marginTop="40dp"
        android:textSize="18dp"/>

</LinearLayout>

