<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:minWidth="400dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_set_status"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:spinnerMode="dropdown"

        android:theme="@style/PopupMenuMy1"
        android:layout_marginTop="20dp"
        android:popupBackground="@color/spinner_color"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="horizontal"
    android:id="@+id/layout_balls"
    android:visibility="visible"
    android:layout_gravity="center"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/balls"
        android:id="@+id/textView4"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:layout_gravity="center"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/status_balls"
        android:layout_gravity="right"
        android:textColor="@color/abc_search_url_text_selected"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:numeric="integer" />
</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/status_save"
        android:layout_gravity="center_horizontal" />
</LinearLayout>